--- a/ManageGo/Views/CreateTicketPage.xaml
+++ b/ManageGo/Views/CreateTicketPage.xaml
@@ -18,13 +18,13 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackLayout Grid.Row="0" Orientation="Horizontal" Padding="8" HeightRequest="42">
-            <Button BackgroundColor="Transparent"
-                    Command="{Binding OnMasterMenuTapped}"
+             <Button BackgroundColor="Transparent"
+                    Command="{Binding OnBackbuttonTapped}"
                     HorizontalOptions="Start"
                     WidthRequest="42"
-                    IsVisible="{Binding HamburgerIsVisible}"
+                    Rotation="180"
                     VerticalOptions="CenterAndExpand"
-                    Image="nav_menu_icon.png" />
+                    Image="arrow_right.png" />
             <Image Source="logo.png" Margin="-42,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <StackLayout Spacing="0" Grid.Row="1">
