* ManageGo.Android.csproj: making changes to UI/logic
* App.xaml:
* User.cs:
* FodyWeavers.xsd:
* ManageGo.csproj:
* Categories.cs:
* LoginPage.xaml:
* WelcomePage.xaml:
* TenantsPage.xaml:
* DataAccess.cs:
* SettingsPage.xaml:
* PaymentsPage.xaml:
* FeedbackPage.xaml:
* CalendarPage.xaml:
* TicketRequest.cs:
* packages.config:
* UnitsListPage.xaml:
* TransactionsPage.xaml:
* CreateTicketPage.xaml:
* NotificationsPage.xaml:
* TicketDetailsPage.xaml:
* MaintenanceTicketsPage.xaml:
* CreateTicketPageModel.cs:
* TicketDetailsPageModel.cs:
* AndroidManifest.xml:

--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -40,6 +40,13 @@
                 <Setter Property="TextColor" Value="#a7a9ac" />
             </Style>
             
+            <Style x:Key="PageTitle" TargetType="Label">
+                <Setter Property="TextColor" Value="{StaticResource Grey-Mid-1}" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="FontSize" Value="Medium" />
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+            </Style>
             
             <Style TargetType="Label">
                 <Style.Triggers>
