--- a/ManageGo/Views/CreateTicketPage.xaml
+++ b/ManageGo/Views/CreateTicketPage.xaml
@@ -31,11 +31,11 @@
             <Image Source="logo.png" Margin="-42,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <StackLayout Spacing="0" Grid.Row="1">
-            <Label  Text="Create Tickets" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+            <Label Text="Create Ticket" Margin="0,8,0,7" Style="{StaticResource PageTitle}" />
             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}"/>
         </StackLayout>
         <ScrollView Grid.Row="2" BackgroundColor="{StaticResource Grey-Light-2}">
-            <StackLayout >
+            <StackLayout>
               
                 <Frame BackgroundColor="White" Margin="17" HasShadow="false">
                     <StackLayout>
