--- a/ManageGo/Views/FeedbackPage.xaml
+++ b/ManageGo/Views/FeedbackPage.xaml
@@ -18,7 +18,7 @@
                     Image="nav_menu_icon.png" />
             <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
-            <Label Text="App feedback" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+            <Label Text="App feedback" Margin="0,8,0,7" Style="{StaticResource PageTitle}"/>
             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Primary}" />
             <ScrollView>
                 <StackLayout Padding="8" VerticalOptions="CenterAndExpand">
