--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -41,7 +41,7 @@
             <Image Source="logo.png" Margin="-42,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <StackLayout Spacing="0" Grid.Row="1">
-            <Label Text="Tickets" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+            <Label Text="Tickets"  Margin="0,8,0,7"  Style="{StaticResource PageTitle}"/>
             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}"/>
             <Grid VerticalOptions="FillAndExpand" MinimumHeightRequest="50" HeightRequest="50">
                 <Grid.RowDefinitions>
@@ -54,7 +54,7 @@
                 </Grid.ColumnDefinitions>
                 <StackLayout Grid.Column="0" HorizontalOptions="Center" Spacing="0" Orientation="Horizontal">
                         <Image Source="calendar_blue.png" VerticalOptions="Center" />
-                        <Label Text="{Binding CalendarButtonText}" VerticalOptions="Center" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" Margin="4,0,0,0"/>
+                        <Label Text="{Binding CalendarButtonText}" VerticalOptions="Center" TextColor="{StaticResource Grey-Dark-1}" FontSize="Small" Margin="4,0,0,0"/>
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnCalendarButtonTapped}"/>
                         </StackLayout.GestureRecognizers>
@@ -62,7 +62,7 @@
                     <BoxView WidthRequest="1" Margin="0,4,0,4" HorizontalOptions="Start" Grid.Column="1" BackgroundColor="{StaticResource Grey-Mid-2}"/>
                     <StackLayout Grid.Column="2" HorizontalOptions="Center" Spacing="0" Orientation="Horizontal">
                         <Image Source="filter_blue.png" VerticalOptions="Center" />
-                        <Label Text="Filter" VerticalOptions="Center" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" Margin="4,0,0,0"/>
+                        <Label Text="Filter" VerticalOptions="Center" TextColor="{StaticResource Grey-Dark-1}" FontSize="Small" Margin="4,0,0,0"/>
                         <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="Start" Margin="2,8,0,0" HorizontalTextAlignment="Start" FontSize="Small" TextColor="#318bfa"/>
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnFilterTapped}"/>
@@ -118,7 +118,7 @@
                                     </Grid>
                                 </StackLayout>
                                 <StackLayout Grid.Column="1" Spacing="8" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
-                                    <Label VerticalOptions="StartAndExpand" TextColor="{StaticResource Grey-Dark-1}" Text="{Binding TicketSubject}" FontSize="Medium" FontAttributes="Bold" LineBreakMode="TailTruncation" />
+                                    <Label VerticalOptions="StartAndExpand" TextColor="{StaticResource Grey-Mid-1}" Text="{Binding TicketSubject}" FontSize="Medium" FontAttributes="Bold" LineBreakMode="TailTruncation" />
                                     <StackLayout Orientation="Horizontal">
                                         <Label Text="{Binding FormattedDate}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" VerticalTextAlignment="Center" VerticalOptions="Center" />
                                         <Label Text="•" IsVisible="{Binding Category,Converter={StaticResource StringToBoolConverter}}" TextColor="{StaticResource Grey-Light-1}" FontSize="Small" VerticalTextAlignment="Center" VerticalOptions="Center"/>
