--- a/ManageGo/Views/NotificationsPage.xaml
+++ b/ManageGo/Views/NotificationsPage.xaml
@@ -29,7 +29,7 @@
                 <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
-                <Label Text="Notifications" TextColor="{StaticResource Grey-Dark-1}"  FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+                <Label Text="Notifications" Margin="0,8,0,7" Style="{StaticResource PageTitle}"/>
                 <BoxView HeightRequest="1" BackgroundColor="{StaticResource Primary}" />
                 <StackLayout Padding="0,8,0,8">
                     <Label Text="Tenants and Units awaiting approval" FontAttributes="Bold" TextColor="{StaticResource Grey-Mid-1}" HorizontalTextAlignment="Center" />
