--- a/ManageGo/Views/SettingsPage.xaml
+++ b/ManageGo/Views/SettingsPage.xaml
@@ -19,7 +19,7 @@
                     Image="nav_menu_icon.png" />
             <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
-            <Label Text="Settings" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+            <Label Text="Settings" Margin="0,8,0,7" Style="{StaticResource PageTitle}"/>
             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Primary}" />
             
     <ScrollView>
