--- a/ManageGo/Views/TenantsPage.xaml
+++ b/ManageGo/Views/TenantsPage.xaml
@@ -39,11 +39,11 @@
                 <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
-                <Label  Text="Tenants" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+                <Label  Text="Tenants"  Margin="0,8,0,7" Style="{StaticResource PageTitle}"/>
                 <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
                 <StackLayout Spacing="4" Padding="12" HeightRequest="25" HorizontalOptions="CenterAndExpand" Orientation="Horizontal">
                     <Image Source="filter_blue.png" />
-                    <Label Text="Filter" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" VerticalOptions="CenterAndExpand" FontAttributes="Bold"/>
+                    <Label Text="Filter" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" VerticalOptions="CenterAndExpand" />
                     <Label Text="{Binding NumberOfAppliedFilters}" FontSize="Small" Margin="0,-3,0,0" TextColor="#318bfa"/>
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnFilterTapped}" />
@@ -76,7 +76,7 @@
                                         <Image Source="profile_grey.png" Margin="8,6,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
                                         <StackLayout HorizontalOptions="FillAndExpand">
                                             <StackLayout Orientation="Horizontal">
-                                                <Label Text="{Binding FullName}" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" />
+                                                <Label Text="{Binding FullName}" FontSize="Medium" FontAttributes="Bold" TextColor="{StaticResource Grey-Mid-1}" />
                                                 <StackLayout Grid.Column="2" Padding="8,8,4,8" HorizontalOptions="EndAndExpand">
                                                     <Image  Source="chevron_down.png" Rotation="0" IsVisible="{Binding DetailsShown, Converter={StaticResource InverseBoolConverter} }" VerticalOptions="Start" HorizontalOptions="End"/>
                                                     <Image  Source="chevron_down.png" Rotation="180" IsVisible="{Binding DetailsShown}" VerticalOptions="Start" HorizontalOptions="End"/>
