--- a/ManageGo/Views/TicketDetailsPage.xaml
+++ b/ManageGo/Views/TicketDetailsPage.xaml
@@ -33,7 +33,7 @@
             <Image Source="logo.png" Margin="-32,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <StackLayout x:Name="TopDetailsView" IsVisible="{Binding ReplyBoxIsVisible,Converter= {StaticResource InverseBoolConverter}}" Spacing="0" Grid.Row="1" Margin="0,0,0,12" >
-            <Label Text="{Binding TicketTitle}" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center" />
+            <Label Text="{Binding TicketTitle}" Margin="0,8,0,7"  Style="{StaticResource PageTitle}" />
             <BoxView HeightRequest="1" BackgroundColor="#85bafa" />
             <Grid VerticalOptions="FillAndExpand" BackgroundColor="#f8f9fa" MinimumHeightRequest="50" HeightRequest="50">
                 <Grid.RowDefinitions>
