--- a/ManageGo/Views/TransactionsPage.xaml
+++ b/ManageGo/Views/TransactionsPage.xaml
@@ -40,7 +40,7 @@
                 <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
-                <Label Text="Bank Transactions" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+                <Label Text="Bank Transactions" Margin="0,8,0,7" Style="{StaticResource PageTitle}" />
                  <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
