--- a/ManageGo/Views/UnitsListPage.xaml
+++ b/ManageGo/Views/UnitsListPage.xaml
@@ -25,7 +25,7 @@
                     <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                 </StackLayout>
                 <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
-                    <Label Text="Units" TextColor="{StaticResource Grey-Dark-1}"  FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+                    <Label Text="Units" Margin="0,8,0,7" Style="{StaticResource PageTitle}"/>
                     <BoxView HeightRequest="1" BackgroundColor="#85bafa" />
                     <StackLayout Orientation="Horizontal" Spacing="12" Padding="22,18,0,18" >
                         <Image Source="building_grey.png" />
