* animated_vector_drawable_28_0_0.xml: fixes #1
* ManageGo.csproj:
* Payment.cs:
* TenantsPage.xaml:
* DataAccess.cs:
* PaymentsPage.xaml:
* packages.config:
* SettingsPage.xaml.cs:
* TransactionsPage.xaml:
* BuildingsListPage.xaml:
* PaymentFilterView.xaml:
* PaymentsPageModel.cs:
* ManageGo.Android.csproj:
* MaintenanceTicketsPage.xaml:
* AndroidManifest.xml:
* Resource.designer.cs:
* MaintenanceTicketsPageModel.cs:
* print_28_0_0.xml:
* common_1_1_1.xml:
* loader_28_0_0.xml:
* runtime_1_1_1.xml:
* livedata_1_1_1.xml:
* viewmodel_1_1_1.xml:
* viewpager_28_0_0.xml:
* palette_v7_28_0_0.xml:
* support_v4_28_0_0.xml:
* customview_28_0_0.xml:
* collections_28_0_0.xml:
* cardview_v7_28_0_0.xml:
* appcompat_v7_28_0_0.xml:
* livedata_core_1_1_1.xml:
* interpolator_28_0_0.xml:
* drawerlayout_28_0_0.xml:
* documentfile_28_0_0.xml:
* cursoradapter_28_0_0.xml:
* support_compat_28_0_0.xml:
* support_core_ui_28_0_0.xml:
* recyclerview_v7_28_0_0.xml:
* support_fragment_28_0_0.xml:
* coordinatorlayout_28_0_0.xml:
* slidingpanelayout_28_0_0.xml:
* support_core_utils_28_0_0.xml:
* swiperefreshlayout_28_0_0.xml:
* asynclayoutinflater_28_0_0.xml:
* versionedparcelable_28_0_0.xml:
* support_annotations_28_0_0.xml:
* support_media_compat_28_0_0.xml:
* localbroadcastmanager_28_0_0.xml:
* support_vector_drawable_28_0_0.xml:

--- a/ManageGo/Views/BuildingsListPage.xaml
+++ b/ManageGo/Views/BuildingsListPage.xaml
@@ -43,7 +43,7 @@
                                     <StackLayout Orientation="Horizontal" Spacing="17">
                                         <Image Source="building_grey.png" Margin="8,6,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
                                         <StackLayout HorizontalOptions="FillAndExpand">
-                                            <Label Text="{Binding BuildingName}" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" />
+                                            <Label Text="{Binding BuildingName}" FontSize="Medium" FontAttributes="Bold" TextColor="{StaticResource Grey-Mid-1}" />
                                             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                                             <StackLayout Orientation="Horizontal" Spacing="4">
                                                 <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
