--- a/ManageGo/Views/PaymentFilterView.xaml
+++ b/ManageGo/Views/PaymentFilterView.xaml
@@ -13,16 +13,16 @@
                 <Button FontSize="Medium" TextColor="White" Text="      Apply filters      " CornerRadius="21" Command="{Binding OnApplyFiltersTapped}" BackgroundColor="{StaticResource Primary}" HorizontalOptions="CenterAndExpand" />
                 <Button FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" Text="Cancel" Command="{Binding OnCloseFliterViewTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand"/>
             </StackLayout>
-            <StackLayout Padding="21,17,21,17" Spacing="17">
+            <StackLayout Padding="21,17,21,17" Spacing="0">
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
-                <StackLayout Orientation="Horizontal">
+                <StackLayout Orientation="Horizontal" Padding="0,6">
                     <Image Source="search_grey" />
                     <local:CustomEntry Placeholder="Search..." Text="{Binding FilterKeywords}" FontSize="Small"  HorizontalOptions="FillAndExpand" />
                 </StackLayout>
-                <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <BoxView HeightRequest="1" VerticalOptions="Start" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
              
                 <!-- date filter -->
-                <Grid>
+                <Grid VerticalOptions="FillAndExpand" Padding="0,17" RowSpacing="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -33,7 +33,7 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                   
-                    <Label Grid.Column="0" Grid.Row="0" Text="Date" TextColor="{StaticResource Grey-Mid-1}" FontSize="Small" />
+                    <Label Grid.Column="0" Grid.Row="0" Text="Date" VerticalOptions="EndAndExpand" TextColor="{StaticResource Grey-Mid-1}" FontSize="Small" />
                     <Grid IsVisible="{Binding FilterDueDateExpanded}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
@@ -41,21 +41,16 @@
                         </Grid.RowDefinitions>
                         <controls:CalendarView Grid.Row="1" WidthRequest="490" SelectedDates="{Binding FilterDueDate}" HeightRequest="245" AllowMultipleSelection="true"/>
                     </Grid>
-                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding FilterDueDateString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="DueDates" />
-                        </Label.GestureRecognizers>
-                    </Label>
-                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" >
-                    <Image.GestureRecognizers>
+                    <Label Grid.Row="0" Grid.Column="1" VerticalOptions="EndAndExpand" Text="{Binding FilterDueDateString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small" />
+                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                     <Grid.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="DueDates" />
-                    </Image.GestureRecognizers>
-                    </Image>
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
                 
                 <!-- building filter -->
-                <Grid>
+                <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -71,7 +66,7 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
-                                        <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
+                                        <StackLayout Orientation="Horizontal" Padding="0,6,0,6">
                                             <Image Source="{Binding CheckBoxImage}" />
                                             <Label Text="{Binding BuildingName}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                             <StackLayout.GestureRecognizers>
@@ -83,7 +78,7 @@
                             </ListView.ItemTemplate>
                         </controls:NestedListView>
                     </StackLayout>
-                    <Image VerticalOptions="StartAndExpand" Grid.Column="2" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                    <Image VerticalOptions="CenterAndExpand" Grid.Column="2" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
                     <Grid.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Buildings" />
                     </Grid.GestureRecognizers>
@@ -91,7 +86,7 @@
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
                
                  <!-- unit filter -->
-                <Grid>
+                <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -99,11 +94,7 @@
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Text="Unit" TextColor="{StaticResource Grey-Mid-1}" FontSize="Small" />
                     <StackLayout Grid.Column="1">
-                        <Label Text="{Binding SelectedUnitString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Units" />
-                            </Image.GestureRecognizers>
-                        </Label>
+                        <Label Text="{Binding SelectedUnitString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small" />
                         <controls:NestedListView IsVisible="{Binding FilterUnitsExpanded}" ItemsSource="{Binding Units}" Margin="0,8,0,0" HasUnevenRows="true" SeparatorVisibility="None"  HeightRequest="150" SelectionMode="None">
                             <x:Arguments>
                                 <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
@@ -111,7 +102,7 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
-                                        <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,12,0,0">
+                                        <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,6,0,6">
                                             <Image Source="{Binding CheckBoxImage}" />
                                             <Label Text="{Binding UnitName}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                             <StackLayout.GestureRecognizers>
@@ -123,15 +114,14 @@
                             </ListView.ItemTemplate>
                         </controls:NestedListView>
                     </StackLayout>
-                    <Image Grid.Column="2" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" >
-                    <Image.GestureRecognizers>
+                    <Image Grid.Column="2" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                     <Grid.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Units" />
-                    </Image.GestureRecognizers>
-                    </Image>
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
                 <!-- tenant filter -->
-                <Grid>
+                <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -139,11 +129,7 @@
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Text="Tenants" TextColor="{StaticResource Grey-Mid-1}" FontSize="Small" />
                     <StackLayout Grid.Column="1">
-                        <Label Text="{Binding SelectedTenantString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Tenants" />
-                            </Image.GestureRecognizers>
-                        </Label>
+                        <Label Text="{Binding SelectedTenantString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small" />
                         <controls:NestedListView IsVisible="{Binding FilterTenantsExpanded}" ItemsSource="{Binding Tenants}" Margin="0,8,0,0" HasUnevenRows="true" SeparatorVisibility="None"  HeightRequest="150" SelectionMode="None">
                             <x:Arguments>
                                 <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
@@ -151,7 +137,7 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
-                                        <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,12,0,0">
+                                        <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,6,0,6">
                                             <Image Source="{Binding CheckBoxImage}" />
                                             <Label Text="{Binding FullName}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                             <StackLayout.GestureRecognizers>
@@ -163,15 +149,14 @@
                             </ListView.ItemTemplate>
                         </controls:NestedListView>
                     </StackLayout>
-                    <Image Grid.Column="2" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" >
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Units" />
-                    </Image.GestureRecognizers>
-                    </Image>
+                    <Image Grid.Column="2" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                      <Grid.GestureRecognizers>
+                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Tenants" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
                 <!-- status filter -->
-                <Grid>
+                <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -179,34 +164,30 @@
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Text="Status" TextColor="{StaticResource Grey-Mid-1}" FontSize="Small" />
                     <StackLayout Grid.Column="1">
-                        <Label Text="{Binding SelectedStatusFlagsString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
-                            <Label.GestureRecognizers>
-                                <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Status" />
-                            </Label.GestureRecognizers>
-                        </Label>
+                        <Label Text="{Binding SelectedStatusFlagsString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small" />
                         <StackLayout IsVisible="{Binding FilterStatusExpanded}">
-                            <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
+                            <StackLayout Orientation="Horizontal" Padding="0,12,0,0" VerticalOptions="FillAndExpand">
                                 <Image Source="{Binding ReceivedPaymentsCheckBoxImage}" />
                                 <Label Text="Received" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                 <StackLayout.GestureRecognizers>
                                     <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Received" />
                                 </StackLayout.GestureRecognizers>
                             </StackLayout>
-                            <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
+                            <StackLayout Orientation="Horizontal" Padding="0,12,0,0" VerticalOptions="FillAndExpand">
                                 <Image Source="{Binding SentPaymentsCheckBoxImage}" />
                                 <Label Text="Sent" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                 <StackLayout.GestureRecognizers>
                                     <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Sent" />
                                 </StackLayout.GestureRecognizers>
                             </StackLayout>
-                            <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
+                            <StackLayout Orientation="Horizontal" Padding="0,12,0,0" VerticalOptions="FillAndExpand">
                                 <Image Source="{Binding ReversedPaymentsCheckBoxImage}" />
                                 <Label Text="Reversed" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                 <StackLayout.GestureRecognizers>
                                     <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding SetFilterStatus}" CommandParameter="Reversed" />
                                 </StackLayout.GestureRecognizers>
                             </StackLayout>
-                            <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
+                            <StackLayout Orientation="Horizontal" Padding="0,12,0,8" VerticalOptions="FillAndExpand">
                                 <Image Source="{Binding RefundedPaymentsCheckBoxImage}" />
                                 <Label Text="Refunded" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                 <StackLayout.GestureRecognizers>
@@ -215,15 +196,14 @@
                             </StackLayout>
                         </StackLayout>
                     </StackLayout>
-                    <Image Grid.Column="2" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" >
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Units" />
-                    </Image.GestureRecognizers>
-                    </Image>
+                    <Image Grid.Column="2" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Status" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
                 <!-- Amount range filter -->
-                <Grid>
+                <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -234,16 +214,11 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <Label Grid.Column="0" Grid.Row="0" Text="Amount" TextColor="{StaticResource Grey-Mid-1}" FontSize="Small" />
-                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding FilterAmountString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandAmountFilterTapped}" CommandParameter="DueDates" />
-                        </Label.GestureRecognizers>
-                    </Label>
-                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" >
-                    <Image.GestureRecognizers>
+                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding FilterAmountString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small" />
+                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                    <Grid.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandAmountFilterTapped}" CommandParameter="DueDates" />
-                    </Image.GestureRecognizers>
-                    </Image>
+                    </Grid.GestureRecognizers>
                 </Grid>
             </StackLayout>
         </StackLayout>
