--- a/ManageGo/Views/PaymentsPage.xaml
+++ b/ManageGo/Views/PaymentsPage.xaml
@@ -44,7 +44,7 @@
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
                 <Label Text="Payments" Style="{StaticResource PageTitle}" Margin="0,8,0,7" />
                  <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
-                <Grid>
+                <Grid MinimumHeightRequest="50">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="1" />
@@ -69,7 +69,7 @@
                 </Grid>
                 <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
                 <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
-                <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
+                <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="Start"/>
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
                 <controls:NestedListView ItemsSource="{Binding FetchedPayments}" 
@@ -112,7 +112,7 @@
                                             <BoxView HeightRequest="1" Margin="0,4,0,4" BackgroundColor="{StaticResource Grey-Light-2}" />
                                             <StackLayout Orientation="Horizontal" >
                                                 <Image Source="profile_grey.png" HorizontalOptions="Center" VerticalOptions="Center"/>
-                                                <Label Text="{Binding FormattedTenantDetails}" Margin="4,0,0,0" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
+                                                <Label Text="{Binding ShortDescription}" Margin="4,0,0,0" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                             </StackLayout>
                                             <StackLayout IsVisible="{Binding DetailsShown}" Spacing="6" Padding="0,8,12,0" HorizontalOptions="FillAndExpand">
                                                 <StackLayout Orientation="Horizontal" >
@@ -143,7 +143,7 @@
                                                     </StackLayout>
                                                     <StackLayout HorizontalOptions="End">
                                                         <Label Text="Bank transaction:" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
-                                                        <Label Text="{Binding BankTransactionNumber}" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Primary}" />
+                                                        <Label Text="{Binding BankTransactionNumber}" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Mid-1}" />
                                                     </StackLayout>
                                                 </StackLayout>
                                                 <BoxView HeightRequest="1" Margin="0,4,0,4" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Key=Grey-Light-2}"/>
@@ -183,7 +183,7 @@
                          IsVisible="{Binding NothingFetched}" 
                     HorizontalOptions="CenterAndExpand">
                 <Label Text="Nothing to see here" HorizontalTextAlignment="Center" FontSize="Small" FontAttributes="Bold" TextColor="Gray"/>
-                <Label Text="Try a broadening your search" HorizontalTextAlignment="Center" FontSize="Small"  TextColor="Gray"/>
+                <Label Text="Try broadening your search" HorizontalTextAlignment="Center" FontSize="Small"  TextColor="Gray"/>
             </StackLayout>
         </Grid>
         <Grid
