--- a/ManageGo/Views/PaymentFilterView.xaml
+++ b/ManageGo/Views/PaymentFilterView.xaml
@@ -8,13 +8,7 @@
     x:Class="ManageGo.Views.PaymentFilterView">
         <ScrollView>
         <StackLayout Spacing="0">
-            <StackLayout Orientation="Horizontal" Padding="21,8,21,0">
-                <Button FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" Text="Reset" Command="{Binding OnResetFiltersButtonTapped}" BackgroundColor="Transparent" HorizontalOptions="StartAndExpand" />
-                <Button FontSize="Medium" TextColor="White" Text="      Apply filters      " CornerRadius="21" Command="{Binding OnApplyFiltersTapped}" BackgroundColor="{StaticResource Primary}" HorizontalOptions="CenterAndExpand" />
-                <Button FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" Text="Cancel" Command="{Binding OnCloseFliterViewTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand"/>
-            </StackLayout>
             <StackLayout Padding="21,17,21,17" Spacing="0">
-                <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
                 <StackLayout Orientation="Horizontal" Padding="0,6">
                     <Image Source="search_grey" />
                     <local:CustomEntry Placeholder="Search..." Text="{Binding FilterKeywords}" FontSize="Small"  HorizontalOptions="FillAndExpand" />
@@ -39,7 +33,7 @@
                             <RowDefinition Height="auto" />
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <controls:CalendarView Grid.Row="1" WidthRequest="490" SelectedDates="{Binding FilterDueDate}" HeightRequest="245" AllowMultipleSelection="true"/>
+                        <controls:CalendarView Grid.Row="1" WidthRequest="490" SelectedDates="{Binding SelectedDateRange}" HeightRequest="245" AllowMultipleSelection="true"/>
                     </Grid>
                     <Label Grid.Row="0" Grid.Column="1" VerticalOptions="EndAndExpand" Text="{Binding FilterDueDateString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small" />
                     <Image Grid.Column="2" Grid.Row="0" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
