--- a/ManageGo/Views/PaymentsPage.xaml
+++ b/ManageGo/Views/PaymentsPage.xaml
@@ -67,8 +67,21 @@
                         </StackLayout.GestureRecognizers>
                     </StackLayout>
                 </Grid>
-                <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
                 <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
+                <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
+                <StackLayout IsVisible="{Binding FilterSelectViewIsShown}" MinimumHeightRequest="75">
+                        <Grid Padding="14,12,18,8">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="auto" />
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Reset" Command="{Binding OnResetFiltersButtonTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand" />
+                            <Button Grid.Column="1" FontSize="Small" TextColor="White" Text="Apply filters" CornerRadius="21" Command="{Binding OnApplyFiltersTapped}" BackgroundColor="{StaticResource Primary}" HorizontalOptions="CenterAndExpand" Padding="18,0,18,0" />
+                            <Button Grid.Column="2" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Cancel" Command="{Binding OnCloseFliterViewTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand"/>
+                        </Grid>
+                        <BoxView HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
+                </StackLayout>
                 <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="Start"/>
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
