--- a/ManageGo/Views/TransactionsFilterPage.xaml
+++ b/ManageGo/Views/TransactionsFilterPage.xaml
@@ -7,15 +7,15 @@
              x:Class="ManageGo.Views.TransactionsFilterPage">
     <ScrollView>
         <StackLayout Spacing="0">
-            <StackLayout Padding="21,17,21,17" Spacing="17">
-                <StackLayout Orientation="Horizontal">
+            <StackLayout Padding="21,17,21,17" Spacing="0">
+                <StackLayout Orientation="Horizontal" Padding="0,6">
                     <Image Source="search_grey" />
                     <local:CustomEntry Placeholder="Search..." Text="{Binding FilterKeywords}" FontSize="Small"  HorizontalOptions="FillAndExpand" />
                 </StackLayout>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
              
                 <!-- date filter -->
-                <Grid>
+                <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -39,16 +39,15 @@
                             <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="DueDates" />
                         </Label.GestureRecognizers>
                     </Label>
-                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" >
-                    <Image.GestureRecognizers>
+                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                    <Grid.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="DueDates" />
-                    </Image.GestureRecognizers>
-                    </Image>
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
 
                 <!-- Amount range filter -->
-                <Grid>
+                <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -64,15 +63,14 @@
                             <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandAmountFilterTapped}" CommandParameter="DueDates" />
                         </Label.GestureRecognizers>
                     </Label>
-                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" >
-                    <Image.GestureRecognizers>
+                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                     <Grid.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandAmountFilterTapped}" CommandParameter="DueDates" />
-                    </Image.GestureRecognizers>
-                    </Image>
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
                 <!-- bank account filter -->
-                <Grid>
+                <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
